# rust_on_hand

./: .env  Cargo.toml  README.md
migrations/2023-07-27-041128_create_user_login/: down.sql  up.sql
migrations/2023-07-27-054816_create_status/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs  user.rs
src/controller/: user.rs
src/user/: common.rs  controller.rs  create_user_handler.rs  models.rs  users_handler.rs
