[package]
name = "base-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenvy = "0.15.7"
log = "0.4.19"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres","r2d2"] }
r2d2 = "0.6.0"
